--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,6 +75,12 @@ section p {
     text-align: center;
 }
 
+@media (max-wdith: 800px) {
+    section {
+        padding: 50px 20px;
+    }
+}
+
 /* header styles */
 
 header {
@@ -106,6 +112,17 @@ header nav {
 
 header nav li {
     margin: 0 15px;
+}
+
+@media (max-width: 800px) {
+    header {
+         padding: 20px 50px;
+         flex-direction: column;
+    }
+
+    header h2 {
+        margin-bottom: 15px;
+    }
 }
 
 /* Hero Styles */
@@ -156,6 +173,24 @@ header nav li {
     }
 }
 
+@media (max-width: 800px) {
+    .hero {
+        min-height: 600px;
+    }
+
+    .hero h1 {
+        font-size: 48px
+    }
+
+    .hero h3 {
+        font-size: 24px;
+    }
+
+    .hero a.btn {
+        padding: 15px 48px;
+    }
+}
+
 /* Destination section */
 
 .destinations .grid li {
@@ -174,6 +209,21 @@ header nav li {
     flex-basis: 70%;
 }
 
+@media (max-width: 1100px){
+    .destinations .grid li.small,
+    .destinations .grid li.large {
+        flex-basis: 50%;
+    }
+}
+
+@media (max-width: 800px){
+    .destinations .grid li.small,
+    .destinations .grid li.large {
+        flex-basis: 100%;
+    }
+}
+
+
 /* Packages section */
 
 .packages .grid li {
@@ -191,6 +241,13 @@ header nav li {
     margin: 25px 0;
 }
 
+@media (max-width: 800px) {
+    .packages .grid li {
+        flex-basis: 100%;
+        padding: 20px;
+    }
+}
+
 /* testimonial section */
 
 .testimonials .quote {
@@ -200,6 +257,16 @@ header nav li {
     margin: 40px 0 25px;
 }
 
+@media (max-width: 800px) {
+    .testimonials .quote {
+        font-size: 18px;
+        margin: 15px 0;
+    }
+
+    .testimonials .author {
+        font-size: 14px;
+    }
+}
 /* contact section */
 
 .contact form {
@@ -220,6 +287,13 @@ header nav li {
     font-size: 18px;
     color: #555;
     flex: 1;
+}
+
+@media (max-width: 100px) {
+    .contact form-input {
+        flex-basis: 100%;
+        margin: 0 0 20px 0;
+    }
 }
 
 /* footer */
@@ -246,6 +320,21 @@ footer p {
     font-size: 14px;
     opacity: .6;
     align-items: center;
+}
+
+@media (max-width: 1100px) {
+    footer {
+        flex-direction: column;
+    }
+
+    footer p {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    footer ul li {
+        margin: 0 8px;
+    }
 }
 
 
